# perplexity-web-wrapper

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
api/: __init__.py  main.py
lib/: __init__.py  perplexity.py
mcp_server/: __init__.py  server.py
perplexity_subscription_mcp/: __init__.py  __main__.py  client.py  server.py
